src/scss/base.scss
*{
  margin: 0;
  padding: 0;
  overflow: hidden;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* make scrollbar transparent */
}

body{
  background-color: $Purple_Light;
  @extend %fontNumber;
}

.grid_Wrapper{
  display: grid;
  grid:{ 
    template-columns: 6fr 1.2fr 12fr 12fr 12fr; //numero de colunas
    template-rows: 7vh 23vh 40vh 23vh 7vh; //numero de linhas
    gap: 0px;
  }
    .grid_aside{
      grid-column: 1/1;
      grid-row: 1/6;
      background-color: $Purple_Light;
      @include positionStyle(relative, 100vh, 100%);
    }
    .grid_div{
      grid-column: 2/2;
      grid-row: 1/6;
      background-color: $Yellow_Light;
    }
    .grid_main{
      grid-column: 3/6;
      grid-row: 2/5;
      background-color: $BackgroundColor;
    }
    .grid_header{
      grid-column: 3/6;
      grid-row: 1/2;
      background-color: $Purple_Dark;
    }
    .grid_footer{
      grid-column: 3/6;
      grid-row: 5/6;
      background-color: $Purple_Dark;
    }
}

.imgContainer{
    @include positionStyle(relative, 24%, 80%);
    margin: auto;
    margin-top: 2%;
    .imgUserBack{
        @include positionStyle(absolute, 150px, 150px);
        animation: colorfull 5s 0s normal infinite;
        border-radius: 60%;
        filter: hue-rotate(5deg);
        background-color: $Yellow_Light;
        
    }
    .imgUserFront{
        @include positionStyle(absolute, 140px, 140px);
        border-radius: 60%;
        background-color: $Purple_Dark;
        left: 3%;
        top: 2.5%;
    }   
  @keyframes colorfull {
      from { filter: hue-rotate(5deg); }
      to { filter: hue-rotate(360deg); }
  }
}

.nameUser{
  @include positionStyle(relative, 7%, 100%);
  color: white;
  font-size: 2em; 
  text-align: center;
  margin-bottom: 3%;
}

.followContainer{
  @include positionStyle(relative, 13%, 95%);
  background-color: $Orange;
  margin: auto;
  
  .followUser{
      @include positionStyle(initial, 100%, 50%);
      float: left;
      text-align: center;
      color: white;
      font-size: 0.9em;
  }
  .followUser p{
    font-size: 2.4em;
  }

  .followingUser{
      @include positionStyle(initial, 100%, 50%);
      float: right;
      text-align: center;
      color: white;
      font-size: 0.9em;
}
  .followingUser p{
    font-size: 2.4em;
  }

}

.friendsContainer{
    @include positionStyle(relative, 100%, 100%);
    .sideColum{
        @include positionStyle(absolute, 55%, 10%);
        float: left;
        background-color: $Purple_Dark;
    }
    .barFriends{
        @include positionStyle(relative, 4%, 100%);
        background-color: $Yellow_Dark;
        margin-top: 2%;
    }
    .barFriends p{
      color: #fff;
      margin-left: 10%;
  }
    .friends{
        @include positionStyle(relative, 10%, 100%);
        .wrapperFriend{
            @include positionStyle(relative, 100%, 10%);
            float: left;
            margin: 0;
              .friend_On_or_Off{
                @include positionStyle(relative, 15%, 50%);
                // transform: translateY(250%);
                top: 40%;
                margin: auto;
                background-color: #2ffb48;
                border-radius: 60%;
            }
        }
        .friendImage{
            @include positionStyle(relative, 70%, 25%);
            background-color: #2ffb48;
            border-radius: 60%;
            margin-left: 3%;
            top: 15%;
            float: left;
        }
        .friendName{
            @include positionStyle(relative, 40%, 55%);
            font-size: 1rem;
            color: #fff;
            left: 4%;
            top: 15%;
        }
        .friendStatus{
            @include positionStyle(relative, 40%, 55%);
            font-size: 0.7rem;
            color: #fff;
            left: 4%;
            top: 10%;
        }
    }
}

.headerContainer{
    @include positionStyle(relative, 100%, 100%);
    .appName{
        @include positionStyle(relative, 100%, 7%);
        left: 5%;
        float: left;
        color: #fff;
        font-size: 1.8rem;
    }
    .search{
        @include positionStyle(relative, 100%, 73%);
        left: 8%;
        float: left;
         input{
            @include positionStyle(relative, 70%, 100%);
            top: 15%;
            font-size: 1rem;
            border-radius: 2%;
        }
    }
    .searchLogo{
        @include positionStyle(relative, 100%, 20%);
        left: 10%;
        top: 10%;
        float: left;
        #searchIcon{
          color: white;
          font-size: 2rem;
      }
    }
}

.iconbarContainer{
    @include positionStyle(relative, 100%, 100%);
    transition: 3s;
    button{
      text-decoration: none;
      outline: none;
      background-color: transparent;
      cursor: pointer;
    }
    #personIcon{
        @include iconStyle($Purple_Light, 2.9em);
        position: relative;
        margin-top: 9%;
        margin-bottom: 59%;
    }
    #personIcon:hover{
      color: $Orange;
      transition: 0.3s;
    }
    #homeIcon{
      @include iconStyle($Purple_Light, 2.9em);
      position: relative;
      margin-bottom: 59%;
    }
    #homeIcon:hover{
      color: $Orange;
      transition: 0.3s;
    }
    #headsetIcon{
      @include iconStyle($Purple_Light, 2.9em);
      position: relative;
      margin-bottom: 59%;
    }
    #headsetIcon:hover{
      color: $Orange;
      transition: 0.3s;
    }
    #queue_musicIcon{
      @include iconStyle($Purple_Light, 2.9em);
      position: relative;
      margin-bottom: 59%;
    }
    #queue_musicIcon:hover{
      color: $Orange;
      transition: 0.3s;
    }

    #settingsIcon{
      @include iconStyle($Purple_Light, 2.9em);
      position: absolute;
      bottom: 0.5%;
    }
    #settingsIcon:hover{
      color: $Orange;
      transition: 0.3s;
    }
}

.iconbarContainer:hover{
  background-color: $Purple_Dark;
  transition: 1s;
}

.containerMain{
    @include positionStyle(relative, 100%, 91%);
    margin: auto;
    overflow-y: scroll;
    .mainNews{
        margin-top: 0.5%;
        @include positionStyle(relative, 45%, 100%);
        .mainlyNews{
            @include positionStyle(relative, 100%, 39%);
            float: left;
            background-color: #fff;
        }
        .oneNews{
            @include positionStyle(relative, 100%, 20%);
            float: left;
            margin-left: 0.2%;
            background-color: #fff;
        }
        .twoNews{
            @include positionStyle(relative, 100%, 20%);
            float: left;
            margin-left: 0.2%;
            background-color: #fff;
        }
        .threeNews{
            @include positionStyle(relative, 100%, 20%);
            float: left;
            margin-left: 0.2%;
            background-color: #fff;
      }
      
    }

    .NameNews{
      color: #fff;
      font-size: 1.3rem;
      margin-top: 0.5%;
      margin-bottom: 0.5%;
    }
    
    .podcastMDS{
        @include positionStyle(relative, 45%, 100%);
        overflow: hidden;
        .track{
            @include positionStyle(relative, 100%, 19.5%);
            background-color: $Orange;
            margin-right: 0.5%;
            margin-top: 0.5%;
            float: left;
            .informationTrack{
                @include positionStyle(absolute, 20%, 100%);
                background-color: $Purple_Light;
                bottom: 0;
                .trackName{
                    @include positionStyle(absolute, 50%, 65%);
                    color: #fff;
                    font-size: 1.2em;
                    right: 0;
                    top: 0;
                }
                .authorName{
                    @include positionStyle(absolute, 30%, 65%);
                    color: #fff;
                    font-size: 0.6em;
                    bottom: 15%;
                    right: 0;
                }
            }
            .authorImg{
                @include positionStyle(absolute, 60px, 60px);
                border-radius: 50%;
                background-color: $Yellow_Light;
                bottom: 2%;
                left: 2%;
                z-index: 2;
            }
        }
    }
}

